--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "nuxt": "^3.14.1592",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@unocss/nuxt": "^0.65.3",
+    "naive-ui": "^2.40.4",
+    "unocss": "^0.65.3",
+    "unplugin-auto-import": "^0.19.0",
+    "unplugin-vue-components": "^0.28.0"
   }
 }
