--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.14.1592",
+    "nuxtjs-naive-ui": "1.0.2",
     "vue": "latest",
     "vue-router": "latest"
   },
