--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@unocss/nuxt": "^0.65.3",
+    "@vicons/ionicons5": "^0.13.0",
     "naive-ui": "^2.40.4",
     "unocss": "^0.65.3",
     "unplugin-auto-import": "^0.19.0",
