--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "less": "^4.2.1",
     "nuxt": "^3.14.1592",
     "nuxtjs-naive-ui": "1.0.2",
     "vue": "latest",
