--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@unocss/nuxt": "^0.65.3",
     "@vicons/ionicons5": "^0.13.0",
     "naive-ui": "^2.40.4",
+    "nuxt-particles": "^0.3.0",
     "unocss": "^0.65.3",
     "unplugin-auto-import": "^0.19.0",
     "unplugin-vue-components": "^0.28.0"
