--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.5.2",
     "@unocss/nuxt": "^0.65.3",
     "@vicons/ionicons5": "^0.13.0",
     "naive-ui": "^2.40.4",
