--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,26 @@
-# 运行程序的 Docker 镜像，使用 nodejs 最新稳定版
-image: node:lts
-
-# 运行 Job 之前的脚本，安装依赖
-before_script:
-  - npm install
-
-# Job 名称为 pages 是 Gitlab 约定的，不可修改
+# Job name has to be `pages`. See https://docs.gitlab.com/ee/user/project/pages/#how-it-works
 pages:
+  image: node
+  variables:
+    NUXT_APP_BASE_URL: /nuxt/
+  before_script:
+    - npm ci --cache .npm --prefer-offline
   script:
-    # 编译代码，生成产物目录默认为 dist 目录
+    # Specify the steps involved to build your app here
     - npm run generate
-    # 将 dist 目录名修改为 public
-    - mv dist public
+  cache: # https://docs.gitlab.com/ee/ci/caching/#cache-nodejs-dependencies
+    key:
+      files:
+        - package-lock.json
+    paths:
+      - .npm/
   artifacts:
     paths:
-      - public
+      # The directory that contains the built files to be published
+      - .output/public
+  # The directory that contains the built files to be published
+  publish: .output/public
   rules:
-    # main 分支有更新时自动部署静态网站
-    - master
+    # This ensures that only pushes to the default branch
+    # will trigger a pages deploy
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
