--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,24 @@
-# Job name has to be `pages`. See https://docs.gitlab.com/ee/user/project/pages/#how-it-works
+# Job name必须为`pages`，详见https://docs.gitlab.com/ee/user/project/pages/#how-it-works
 pages:
-  image: node
-  variables:
-    NUXT_APP_BASE_URL: /nuxt/
-  before_script:
-    - npm ci --cache .npm --prefer-offline
-  script:
-    # Specify the steps involved to build your app here
-    - npm run generate
-  cache: # https://docs.gitlab.com/ee/ci/caching/#cache-nodejs-dependencies
-    key:
-      files:
-        - package-lock.json
-    paths:
-      - .npm/
-  artifacts:
-    paths:
-      # The directory that contains the built files to be published
-      - .output/public
-  # The directory that contains the built files to be published
-  publish: .output/public
-  rules:
-    # This ensures that only pushes to the default branch
-    # will trigger a pages deploy
-    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+   image: node
+   before_script:
+      - corepack enable
+      - pnpm install --frozen-lockfile
+   script:
+      # 指定构建应用的步骤
+      - pnpm generate
+   cache: # https://docs.gitlab.com/ee/ci/caching/#cache-nodejs-dependencies
+      key:
+         files:
+         - pnpm-lock.yaml
+      paths:
+         - .pnpm/
+   artifacts:
+      paths:
+         # 包含构建文件的目录
+         - .output/public
+   # 包含构建文件的目录
+   publish: .output/public
+   rules:
+      # 仅当推送到默认分支时，才会触发pages部署
+      - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
