--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^3.1.0",
     "less": "^4.2.1",
     "nuxt": "^3.14.1592",
     "nuxtjs-naive-ui": "1.0.2",
@@ -17,6 +18,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt-themes/typography": "^1.0.1",
     "@nuxtjs/color-mode": "^3.5.2",
     "@unocss/nuxt": "^0.65.3",
     "@vicons/ionicons5": "^0.13.0",
