--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@nuxt/content": "^3.1.0",
+    "animejs": "^3.2.2",
+    "dayjs": "^1.11.13",
+    "fuse.js": "^7.1.0",
     "less": "^4.2.1",
     "nuxt": "^3.14.1592",
     "nuxtjs-naive-ui": "1.0.2",
