--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@css-render/vue3-ssr": "^0.15.14",
     "@nuxt/content": "^3.1.0",
     "animejs": "^3.2.2",
     "dayjs": "^1.11.13",
