--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .nuxt
 .nitro
 .cache
+dist
 
 # Node dependencies
 node_modules
@@ -18,6 +19,6 @@ logs
 .idea
 
 # Local env files
-.env
-.env.*
-!.env.example
+# .env
+# .env.*
+# !.env.example
