--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@css-render/vue3-ssr": "^0.15.14",
     "@nuxt/content": "^3.1.0",
+    "@vueuse/nuxt": "12.8.2",
     "animejs": "^3.2.2",
     "dayjs": "^1.11.13",
     "fuse.js": "^7.1.0",
