--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-# BASE_URL=https://vercelapi.minganx.top
-BASE_URL=http://localhost:3001
+BASE_URL=https://vercelapi.minganx.top
+# BASE_URL=http://localhost:3001
