--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "build": "nuxt build --dotenv .env.prd",
     "dev": "nuxt dev --dotenv .env.local",
     "dev:prd": "nuxt dev --dotenv .env.prd",
     "generate": "nuxt generate --dotenv .env.prd",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "pnpm approve-builds"
   },
   "dependencies": {
     "@css-render/vue3-ssr": "^0.15.14",
@@ -32,5 +32,10 @@
     "unocss": "^66.3.2",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.7.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "better-sqlite3"
+    ]
   }
 }
