--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "dev:prd": "nuxt dev --dotenv .env.prd",
     "generate": "nuxt generate --dotenv .env.prd",
     "preview": "nuxt preview",
-    "postinstall": "pnpm approve-builds"
+    "postinstall": "pnpm approve-builds",
+    "release": "release-it",
+    "release:dry": "release-it --dry-run",
+    "release:patch": "release-it patch",
+    "release:minor": "release-it minor",
+    "release:major": "release-it major",
+    "release:alpha": "release-it --preRelease=alpha",
+    "release:beta": "release-it --preRelease=beta"
   },
   "dependencies": {
     "@css-render/vue3-ssr": "^0.15.14",
@@ -25,10 +32,12 @@
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.5.2",
+    "@release-it/conventional-changelog": "^10.0.1",
     "@unocss/nuxt": "^66.3.2",
     "@vicons/ionicons5": "^0.13.0",
     "naive-ui": "^2.42.0",
     "nuxt-particles": "^0.3.0",
+    "release-it": "^19.0.3",
     "unocss": "^66.3.2",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.7.0"
