--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - "v*" # 只在推送版本标签时触发
 
+permissions:
+  contents: write # 允许推送到仓库
+
 jobs:
   trigger-deploy:
     runs-on: ubuntu-latest
@@ -14,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GH_TOKEN }}
 
       - name: 创建发布分支
         run: |
